# Nova-Engine

./: .gitignore  CMakeLists.txt  README.md  main.cpp  objects.cpp  shader.cpp  utils.cpp
include/Nova/: callbacks.hpp  components.hpp  const.hpp  editor_camera.hpp  engine.hpp  enums.hpp  light_manager.hpp  nova.hpp  objects.hpp  shader.hpp  structs.hpp  systems.hpp  types.hpp  ui.hpp  utils.hpp
include/PGE/: callbacks.hpp  components.hpp  const.hpp  enums.hpp  objects.hpp  shader.hpp  structs.hpp  utils.hpp
include/glad/: glad.h
lib/: nfd.lib
saved/: test.json  test2.json  test3.json  test4.json
shaders/: forward.frag  fragment.frag  unlit.frag  vertex.vert
shaders/active/: fragment.frag  geometry.geom  vertex.vert
shaders/lights/: fragment.frag  vertex.vert
src/: glad.c  main.cpp
src/Nova/: callbacks.cpp  editor_camera.cpp  light_manager.cpp  objects.cpp  shader.cpp  systems.cpp  ui.cpp  utils.cpp
src/PGE/: callbacks.cpp  objects.cpp  utils.cpp
